--- a/mysite/core/templates/base.html
+++ b/mysite/core/templates/base.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     {% if messages %}
-    <ul>
+    <ul class="max-w-xl mx-auto mt-4">
       {% for message in messages %}
-      <li style="color: green">{{message}}</li>
+      <li class="bg-green-100 text-green-800 border border-green-300 rounded px-4 py-2 mb-2">{{ message }}</li>
       {% endfor %}
     </ul>
     {% endif %}
