--- a/mysite/core/templates/base.html
+++ b/mysite/core/templates/base.html
@@ -13,9 +13,24 @@
       <li class="bg-green-100 text-green-800 border border-green-300 rounded px-4 py-2 mb-2">{{ message }}</li>
       {% endfor %}
     </ul>
-    {% endif %}
-
+    {% endif %} {% comment %} #EQ$6Jdr7DSLnf4 {% endcomment %}
     <main class="min-h-screen bg-gray-100">
+      {% if user.is_authenticated %}
+
+      <p class="text-sm">
+        Welcome, {{ user.username }} |
+      </p>
+
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit" class"text-blue-500 hover:underline">Logout</button>
+      <form>
+    
+      {% else %}
+      <a href="{% url 'login' %}" class="text-blue-500">Login</a> |
+      <a href="{% url 'signup' %}" class="text-blue-500">Sign up</a>
+      {% endif %} 
+      
       {% block content %} {% endblock %}
 
       <footer class="text-center py-4 text-sm text-gray-500">&copy; 2024 Job Tracker App</footer>
