--- a/mysite/core/templates/job_list.html
+++ b/mysite/core/templates/job_list.html
@@ -3,7 +3,7 @@
 <div class="max-w-3xl mx-auto mt-10">
   <h2 class="text-3xl font-bold text-blue-600 text-center my-6">All Job Applications</h2>
 
-  {% for job in jobs %}
+  {% for job in page_obj %}
   <div class="bg-white shadow-md rounded p-4 border-2 border-dotted">
     <h2 class="text-xl font-semibold text-gray-800 text-center">{{ job.position }}</h2>
     <p class="text-gray-600 text-center py-5">{{job.company}} - Applied on: {{ job.date_applied }}</p>
@@ -36,5 +36,20 @@
       ⬅️ Back 
     </a>
   </div>
+  <div class="mt-6 flex justify-center space-x-4">
+  {% if page_obj.has_previous %}
+    <a href="?{% if request.GET.status %}status={{ request.GET.status }}&{% endif %}page={{ page_obj.previous_page_number }}" class="text-blue-600 hover:underline">
+      ⬅️ Previous
+    </a>
+  {% endif %}
+
+  <span class="font-semibold">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+
+  {% if page_obj.has_next %}
+    <a href="?{% if request.GET.status %}status={{ request.GET.status }}&{% endif %}page={{ page_obj.next_page_number }}" class="text-blue-600 hover:underline">
+      Next ➡️
+    </a>
+  {% endif %}
+</div>
 </div>
 {% endblock %}
