--- a/mysite/core/templates/base.html
+++ b/mysite/core/templates/base.html
@@ -24,7 +24,7 @@
       <form method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <button type="submit" class"text-blue-500 hover:underline">Logout</button>
-      <form>
+      </form>
     
       {% else %}
       <a href="{% url 'login' %}" class="text-blue-500">Login</a> |
