--- a/mysite/core/templates/job_list.html
+++ b/mysite/core/templates/job_list.html
@@ -18,14 +18,14 @@
   <p class="text-gray-600 text-center">No jobs added yet.</p>
   {% endfor %}
 
-  <form method="get" class="mb-6 text-center">
+  <form method="get" action="{% url 'job_list' %}" class="mb-6 text-center">
       <label for="status" class="mr-2 font-medium"> Filter Status:</label>
       <select name="status" id="status" class="border border-gray-300 rounded px-3 py-1">
         <option value=""> All</option>
-        <option value"applied" {% if request.GET.status == "applied" %}selected{%endif%}>applied</option>
-        <option value"interview" {% if request.GET.status == "interview" %}selected{%endif%}>interview</option>
-        <option value"offer" {% if request.GET.status == "offer" %}selected{%endif%}>offer</option>
-        <option value"rejected" {% if request.GET.status == "rejected" %}selected{%endif%}>rejected</option>
+        <option value="applied" {% if request.GET.status == "applied" %}selected{%endif%}>applied</option>
+        <option value="interview" {% if request.GET.status == "interview" %}selected{%endif%}>interview</option>
+        <option value="offer" {% if request.GET.status == "offer" %}selected{%endif%}>offer</option>
+        <option value="rejected" {% if request.GET.status == "rejected" %}selected{%endif%}>rejected</option>
       </select>
       <button type="submit" class="ml-2 bg-blue-600 text-white px-3 py-1 rounded">Filter</button>
     </form>
